--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ copyright = "@buta7.com"
 
 # googleAnalytics = ""
 
-disqusShortname = "higebobo"
+disqusShortname = "buta7-netlify-app"
 
 # enableRobotsTXT = true
 
