--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,9 @@ theme = "dream"
 dateFormat = "Monday, Jan 2, 2006"
 copyright = "@buta7.com"
 
-# googleAnalytics = ""
-
+googleAnalytics = "UA-171511257-1"
 disqusShortname = "buta7-netlify-app"
-
 # enableRobotsTXT = true
-
 
 [params]
   background = "black"
