--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/dream"]
 	path = themes/dream
 	url = https://github.com/g1eny0ung/hugo-theme-dream.git
+[submodule "themes/dream-plus"]
+	path = themes/dream-plus
+	url = https://github.com/UtkarshVerma/hugo-dream-plus.git
