--- a/config.toml
+++ b/config.toml
@@ -22,13 +22,13 @@ disqusShortname = "buta7-netlify-app"
   # backgroundImage = "/me/background.jpg"
   linkColor = "orangered"
 
-  author = "buta7"
+  author = "higebobo"
   description = ""
   #avatar = "/img/avatar.jpg"
   avatar = "/images/sillywalk.png"
   motto = "The Ministry of Silly Walks"
 
-  #twitter = "buta7"
+  twitter = "higebobo"
   github = "buta7"
   #gitlab = "buta7"
   #bitbucket = "bitbucket"
